Criacao das Rotas de Adicionar Torta e Detalhe de Torta

--- a/Views/Pie/Index.cshtml
+++ b/Views/Pie/Index.cshtml
@@ -13,7 +13,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">R$ @pie.Price</li>
                 </ul>
-                <a href="/pie/detail/@pie.Id" class="btn btn-primary">Ver Detalhes</a>
+                <a href="/pie/details/@pie.Id" class="btn btn-primary">Ver Detalhes</a>
             </div>
         }
     </div>
