--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.field-validation-error {
+    color: white;
+    padding: 5px 5px;
+    background-color: red;
+    border: 1px solid;
+    border-radius: 6px;
+    margin: 9px 0px 10px 0px;
+    top: 0px;
+    position: relative;
+    top: 10px;
+}
